--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,25 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background-color: azure;
+body
+{
+    color: #333;
+    text-align: center;
+    font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
