--- a/css/estilos.css
+++ b/css/estilos.css
@@ -47,3 +47,10 @@ body
 {
     padding: 1em;
 }
+
+#footer{
+    width: 100%;
+    height: 100px;
+    background-color: aqua;
+    color: cornsilk;
+}
