--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,3 +50,10 @@ body
     background: white;
     padding: 1em;
 }
+
+#footer{
+    width: 100%;
+    height: 100px;
+    background-color: aqua;
+    color: cornsilk;
+}
